--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,11 +1,10 @@
 .root {
   margin: 0;
-  background-color: #2A2C2F;
+  /* background-color: #2A2C2F; */
   font-family: 'Inter';
-
 }
 
-div, nav, section, h1, h2, h3, h4, h5, h6, a, img, ol, ul, li {
+div, nav, section, h1, h2, h3, h4, h5, h6, a, img, ol, ul, li, article {
   outline-style: solid;
   outline-color: red;
 }
