--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,4 +1,94 @@
 .lead {
   display: flex;
+  flex-direction: column;
   background-color: #2A2C2F;
+  color: #ffffff;
+  font-family: 'Inter';
+}
+
+.lead__title {
+  text-align: center;
+}
+.lead__subtitle {
+  text-align: center;
+}
+.lead__image {
+  width: 100%;
+}
+.lead__caption {
+  font-style: normal;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+@media (min-width: 320px) and (max-width: 425px){
+  .lead { }
+  .lead__title {
+    font-weight: 900;
+    font-style: normal;
+    font-size: calc();
+    line-height: 44px;
+    margin: 32px 16px 0;
+  }
+  .lead__subtitle {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 16px 16px 40px;
+   }
+  .lead__image {
+
+  }
+  .lead__caption {
+    font-size: 10px;
+    line-height: 14px;
+    margin: 8px auto 0 16px;
+  }
+}
+@media (min-width: 426px) and (max-width: 768px) {
+  .lead { }
+  .lead__title {
+    margin: 48px 24px 0;
+    font-style: normal;
+    font-weight: 900;
+    /* font-size: 96px; */
+    font-size: calc( 40px + 56 * ((100vw - 320px) / 448));
+    line-height: 100px;
+  }
+  .lead__subtitle {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 30px;
+    line-height: 36px;
+    margin: 32px 64px 56px;
+  }
+  .lead__image { }
+  .lead__caption {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 14px;
+    margin: 8px auto 0 24px;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  .lead { }
+  .lead__title { }
+  .lead__subtitle { }
+  .lead__image { }
+  .lead__caption { }
+}
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .lead { }
+  .lead__title { }
+  .lead__subtitle { }
+  .lead__image { }
+  .lead__caption { }
+}
+@media screen and (min-width: 1281px) {
+  .lead { }
+  .lead__title { }
+  .lead__subtitle { }
+  .lead__image { }
+  .lead__caption { }
 }
