--- a/pages/index.css
+++ b/pages/index.css
@@ -2,12 +2,13 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/inter.css);
 /* @import url(../); */
-@import url(../blocks/root/root.css);
+@import url(../blocks/page/page.css);
 /* blocks */
 /* header */
 @import url(../blocks/header/header.css);
 /* lead */
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/intro/intro.css);
 /* photo-grid */
 @import url(../blocks/photo-grid/proto-grid.css);
 @import url(../blocks/cover/cover.css);
