--- a/blocks/photo-grid/proto-grid.css
+++ b/blocks/photo-grid/proto-grid.css
@@ -1,6 +1,20 @@
 .photo-grid {
-  min-height: calc(100vh - 72px);
+  /* min-height: calc(100vh - 72px); */
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
+  gap: 12px;
+  justify-content: center;
+  padding-top: 64px;
+  background-color: #2A2C2F;
+}
+
+.photo-grid__item {
+  width: 288px;
+  height: 216px;
+}
+
+@media (min-width: 320px) and (max-width: 425px) {
+  .photo-grid__item {
+    /* width: 288px; */
+    /* height: 216px; */
+  }
 }
