--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -1,1 +1,28 @@
+.header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 90%;
+  margin: auto;
+ }
+
+
+ @media (min-width: 425px) and (max-width: 768px) {
+  .header__container {
+    min-width: 93.75%;
+    max-height: 52px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .header__container {
+    width: 90.625%;
+  }
+}
+
+@media (min-width: 1025px) {
+  .header__container {
+    width: 92.5%;
+  }
+}
 
