--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -10,8 +10,31 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-div, nav, section, h1, h2, h3, h4, h5, h6, a, dl, dt, dd, img, p, ol, ul, li, article {
+h1, h2, h3, h4, h5, h6, a, dl, dt, dd, img, p, ol, article {
   outline-style: solid;
   outline-color: red;
 }
 
+section {
+  outline-style: dotted;
+}
+
+div {
+  outline-style: dashed;
+  color: greenyellow;
+}
+
+nav {
+  outline-style: groove;
+  color: navy;
+}
+
+ul {
+  outline-style: dashed;
+  color: rgb(84, 177, 177);
+}
+
+li {
+  outline-style: dotted;
+  color:rgb(143, 236, 236)
+}
