--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,8 @@
 /* blocks */
 /* header */
 @import url(../blocks/header/header.css);
+/* content */
+@import url(../blocks/content/content.css);
 /* lead */
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
@@ -17,9 +19,14 @@
 @import url(../blocks/footer/footer.css);
 /* elements */
 /* header */
+@import url(../blocks/header/__container/header__container.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__main-nav/header__main-nav.css);
+@import url(../blocks/header/__list/header__list.css);
+@import url(../blocks/header/__item/header__item.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
 /* lead */
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 /* mod */
-@import url(../blocks/logo/_place/logo_place_header.css);
-
+@import url(../blocks/header/__lang-link/_lang/header__lang-link_lang_ru.css);
