--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,7 @@
 @import url(../blocks/content/content.css);
 /* lead */
 @import url(../blocks/lead/lead.css);
+/* intro */
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
@@ -18,15 +19,20 @@
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/footer/footer.css);
 /* elements */
-/* header */
+/* header__ */
 @import url(../blocks/header/__container/header__container.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__main-nav/header__main-nav.css);
 @import url(../blocks/header/__list/header__list.css);
 @import url(../blocks/header/__item/header__item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-/* lead */
+/* lead__ */
 @import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+
+/* photo-grid__ */
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 /* mod */
 @import url(../blocks/header/__lang-link/_lang/header__lang-link_lang_ru.css);
