--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  /* (16 + 42 + 16) / 320 */
+  /* (margin-top:16px + logo:42px + margin-bottom:16px) / 320 */
   height: 23.125vw;
   width: 100%;
   display: flex;
