--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,16 +1,17 @@
 .lead {
   display: flex;
   flex-direction: column;
-  min-height: 470px;
-  /* height: 146.875vw; */
+  /* min-height: margin-top: 32px + h1: 88px + margin: 16px + p: 40px + margin: 40px + img: 200px + margin-top: 8px + caption: 14px */
+  min-height: 438px;
+  /* height: 136.875vw; */
 }
 
-@media screen and (max-width:768px) {
+/* @media (min-width:425px) and (max-width:768px) {
   .lead {
-    height: calc(470px + ( (100vw - 320px) / (768 - 320) * (922 - 470) ) );
+    height: calc(470px + ( (100vw - 425px) / (768 - 425) * (882 - 438) ) );
   }
-}
-@media (min-width:769px) and (max-width: 1024px) {
+} */
+/* @media (min-width:769px) and (max-width: 1024px) {
   .lead {
     height: calc(922px + ( (100vw - 769px) / (1024 - 769) * (1022 - 922) ) );
   }
@@ -20,4 +21,4 @@
   .lead {
     height: calc(1022px + ( (100vw - 1025px) / (1280 - 1025) * (1073 - 1022) ) );
   }
-}
+} */
