--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,46 +1,8 @@
 .intro {
   display: flex;
-  flex-direction: column;
-  /* background-color: #2A2C2F; */
-  /* color: #ffffff; */
+  width: 100%;
+  /* height: (882 - 32 - 32) / 320; */
+  /* height: 255.625vw; */
 }
 
-.intro__title {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 900;
-  font-size: 32px;
-  line-height: 35px;
-  text-align: center;
-  margin: 64px 16px 0;
-}
 
-.intro__subtitle {
-  margin: 40px 16px 0;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 163%;
-}
-
-.intro__list {
-  /* display: inline; */
-  /* display: inline; */
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 18px;
-  margin: 34px 16px 0;
-}
-
-.intro__list_key {
-  display: inline;
-}
-
-.intro__list_value {
-  display: inline;
-  margin-left: 10px;
-  font-weight: 400;
-}
