--- a/blocks/intro/__card/intro__card.css
+++ b/blocks/intro/__card/intro__card.css
@@ -1,5 +1,4 @@
 .intro__card {
-  margin-left: 16px;
   margin-right: 16px;
   display: flex;
   flex-direction: column;
@@ -15,7 +14,7 @@
   }
 }
 
-@media (min-width:769px) and (max-width: 1024px) {
+@media (min-width:769px) {
   .intro__card {
     /* ml=48px */
     margin-left: calc(24px +  (100vw - 769px) / (1024 - 769) * (48 - 24) );
@@ -29,5 +28,15 @@
     /* ml=148px */
     margin-left: calc(48px +  (100vw - 1025px) / (1280 - 1025) * (148 - 48) );
     width: 690px;
+  }
+}
+
+@media (min-width: 1281px) {
+  .intro__card {
+    width: 690px;
+    /* margin-left: calc(148px +  (100vw - 1281px) / (100vw - 1280) * ( ... - 148 ); */
+    margin-left: auto;
+    margin-right: auto;
+    /* вопросик для Миши */
   }
 }
