--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,8 @@
 @import url(../blocks/cover/cover.css);
 /* footer */
 @import url(../blocks/footer/footer.css);
+/* breadcrumb */
+@import url(../blocks/breadcrumb/breadcrumb.css);
 /* header__ */
 @import url(../blocks/header/__container/header__container.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -51,5 +53,11 @@
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__link/cover__link.css);
+/* breadcrumb */
+@import url(../blocks/breadcrumb/__list/breadcrumb__list.css);
+@import url(../blocks/breadcrumb/__item/breadcrumb__item.css);
+@import url(../blocks/breadcrumb/__link/breadcrumb__link.css);
+/* footer__ */
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 /* mod */
 @import url(../blocks/header/__lang-link/_lang/header__lang-link_lang_ru.css);
