--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -11,11 +11,10 @@
   /* height: 520px; */
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .intro__subtitle {
-/* TODO через calc() выразить */
     line-height: 163%;
   }
-}
+} */
 
 
