--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   background-color: #2A2C2F;
   color: #fff;
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: 'Inter', sans-serif;
   display: flex;
   flex-direction: column;
   -webkit-font-smoothing: antialiased;
