--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,27 +11,28 @@
   .lead__title {
     font-size: calc(40px + ( (100vw - 425px) / (768 - 425) ) * (96 - 40) );
     line-height: calc(44px + ( (100vw - 425px) / (768 - 425) ) * (100 - 44) );
-    /* пока оставлю отступ статичным но можно и calc() прописать и еще добавить 320-424 на него */
-    margin: 20px 24px 0;
   }
 }
-/* ниже свойство шрифты выросли и не меняются больше */
 @media (min-width:768px) {
   .lead__title {
     font-size: 96px;
     line-height: 100px;
-    margin-left: calc(24px +  (100vw - 769px) / (1024 - 769) * (152 - 24) );
-    margin-right: calc(24px +  (100vw - 769px) / (1024 - 769) * (152 - 24) );
+    margin-left: calc(24px +  (100vw - 768px) / (1024 - 768) * (152 - 24) );
+    margin-right: calc(24px +  (100vw - 768px) / (1024 - 768) * (152 - 24) );
     margin-top: 20px;
   }
 }
-/* margin растет по формуле  */
 
 @media (min-width: 1024px) {
   .lead__title {
-    margin-left: calc(152px +  (100vw - 1025px) / (1280 - 1025) * (280 - 152) );
-    margin-right: calc(152px +  (100vw - 1025px) / (1280 - 1025) * (280 - 152) );
-    /* margin-top: 56px; */
-    margin-top: calc(20px +  (100vw - 1025px) / (1280 - 1025) * (28 - 20) );
+    margin-left: calc(152px +  (100vw - 1024px) / (1280 - 1024) * (280 - 152) );
+    margin-right: calc(152px +  (100vw - 1024px) / (1280 - 1024) * (280 - 152) );
+    margin-top: calc(20px + (100vw - 1024px) / (1280 - 1024) * (28 - 20) );
+  }
+}
+
+@media (min-width: 1280px) {
+  .lead__title {
+    margin-top: 28px;
   }
 }
