--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,7 +11,7 @@
     column-gap: 28px;
     row-gap: 48px;
     grid-template-columns: minmax(320px, 340px) minmax(288px, 352px);
-
+    padding-bottom: 73px;
   }
 }
 
@@ -19,12 +19,13 @@
   .place {
     column-gap: 32px;
     grid-template-columns: minmax(340px, 440px) minmax(352px, 456px);
+    padding-bottom: 80px;
   }
 }
 
 @media (min-width: 1280px) {
   .place {
-  max-width: 984px;
   column-gap: 40px;
+  grid-template-columns: 460px 484px;
   }
 }
