--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,9 +1,17 @@
 .cover__link {
   text-decoration: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 16px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  text-align: center;
   z-index: 1;
+  margin: 0 auto;
+}
+
+@media (min-width: 1280px) {
+  .cover__link {
+    width: 1184px;
+    height: 740px;
+  }
 }
