--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,17 +1,18 @@
 .cover__link {
   text-decoration: none;
-  display: block;
   width: 100%;
   height: 100%;
   position: relative;
-  text-align: center;
-  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
 }
 
-@media (min-width: 1280px) {
+/* @media (min-width: 1280px) {
   .cover__link {
     width: 1184px;
     min-height: 740px;
   }
-}
+} */
