--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -11,6 +11,7 @@
 
 @media (min-width: 425px) {
   .cover__title {
+    margin-left: 16px;
     font-size: calc( 32px + ( (100vw - 425px) / (768 - 425) * (72 - 32) ) );
     line-height: calc( 35px + ( (100vw - 425px) / (768 - 425) * (76 - 35) ) );
   }
@@ -18,6 +19,7 @@
 
 @media (min-width: 768px) {
   .cover__title {
+    margin-left: 0;
     font-size: 72px;
     line-height: 76px;
     margin-bottom: 32px;
